force-app/main/default/objects/Contact__c/Contact__c.object-meta.xml
<CustomObject>
    <label>LV Contact</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>