force-app/main/default/objects/Contact__c/fields/Account_Owner_Equals_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Equals_Logged_In_User__c</fullName>
    <formula>Account__r.OwnerId =$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Equals Logged In User?</label>
    <type>Checkbox</type>
</CustomField>