force-app/main/default/objects/Contact__c/fields/Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Relationship</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>