force-app/main/default/objects/Contact__c/fields/Account_Relationships_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationships_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Relationships del</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>