force-app/main/default/objects/Contact__c/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <formula>Account__r.Billing_State_Backend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account State</label>
    <type>Text</type>
</CustomField>