force-app/main/default/objects/Contact__c/fields/Account_Type_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_From_Account__c</fullName>
    <formula>TEXT( Account__r.Account_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type_From Account</label>
    <type>Text</type>
</CustomField>