force-app/main/default/objects/Contact__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(  Birthdate__c ) - IF(OR (MONTH(TODAY()) &lt; MONTH( Birthdate__c ),AND(MONTH(TODAY()) == MONTH( Birthdate__c ),DAY(TODAY()) &lt; DAY( Birthdate__c ))),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>