force-app/main/default/objects/Contact__c/fields/Assign_Lead__c.field-meta.xml
<CustomField>
    <fullName>Assign_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contact1</relationshipName>
    <type>Lookup</type>
</CustomField>