force-app/main/default/objects/Contact__c/fields/Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Email__c</fullName>
    <label>Assistant Email</label>
    <type>Email</type>
</CustomField>