force-app/main/default/objects/Contact__c/fields/Assistant_Name__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Name__c</fullName>
    <label>Assistant Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>