force-app/main/default/objects/Contact__c/fields/AssistantEmail__c.field-meta.xml
<CustomField>
    <fullName>AssistantEmail__c</fullName>
    <label>Assistant Email</label>
    <type>Email</type>
</CustomField>