force-app/main/default/objects/Contact__c/fields/AssistantPhone__c.field-meta.xml
<CustomField>
    <fullName>AssistantPhone__c</fullName>
    <label>Asst. Phone</label>
    <type>Phone</type>
</CustomField>