force-app/main/default/objects/Contact__c/fields/Client_Communication_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Client_Communication_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to include this person in lists for Teladoc mass communications. Field name update from &apos;Include in Client Newsletter?&apos; April 2021.</inlineHelpText>
    <label>Client Communication Recipient</label>
    <type>Checkbox</type>
</CustomField>