force-app/main/default/objects/Contact__c/fields/Contact_Email_Parse__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Parse__c</fullName>
    <description>Looks to email field and parses email domain information from the email address. This is utilized in automation surrounding new leads with no accounts.</description>
    <formula>IF(Email__c&lt;&gt;NULL,SUBSTITUTE(Email__c, LEFT(Email__c, FIND(&quot;@&quot;, Email__c)), NULL),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Looks to email field and parses email domain information from the email address. This is utilized in automation surrounding new leads with no accounts.</inlineHelpText>
    <label>Contact Email Parse</label>
    <type>Text</type>
</CustomField>