force-app/main/default/objects/Contact__c/fields/Contact_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Contact_Grouping__c</fullName>
    <label>Contact Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr Bimal&apos;s CMO list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>