force-app/main/default/objects/Contact__c/fields/Contact_Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_2__c</fullName>
    <label>Contact Owner 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>