force-app/main/default/objects/Contact__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <formula>Account__r.CSM__r.FirstName &amp;&quot; &quot;&amp;  Account__r.CSM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM</label>
    <type>Text</type>
</CustomField>