force-app/main/default/objects/Contact__c/fields/CSM_Equals_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>CSM_Equals_Logged_In_User__c</fullName>
    <formula>Account__r.CSM__c  = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Equals Logged In User?</label>
    <type>Checkbox</type>
</CustomField>