force-app/main/default/objects/Contact__c/fields/CSM_ID_From_Account__c.field-meta.xml
<CustomField>
    <fullName>CSM_ID_From_Account__c</fullName>
    <formula>Account__r.CSM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM ID_From Account</label>
    <type>Text</type>
</CustomField>