force-app/main/default/objects/Contact__c/fields/Current_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Status__c</fullName>
    <formula>TEXT(Account__r.Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Account Status</label>
    <type>Text</type>
</CustomField>