force-app/main/default/objects/Contact__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <formula>TEXT( MONTH( Birthdate__c ) ) + &apos;/&apos; + TEXT( DAY( Birthdate__c ) ) + &apos;/&apos; + TEXT( YEAR( Birthdate__c ) ) + &apos; &apos;+&apos;Age:(&apos;+ TEXT(Age__c) +&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Birth</label>
    <type>Text</type>
</CustomField>