force-app/main/default/objects/Contact__c/fields/DeceasedDate__c.field-meta.xml
<CustomField>
    <fullName>DeceasedDate__c</fullName>
    <label>Deceased Date</label>
    <type>DateTime</type>
</CustomField>