force-app/main/default/objects/Contact__c/fields/Did_we_interact_with_prospect_at_event__c.field-meta.xml
<CustomField>
    <fullName>Did_we_interact_with_prospect_at_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in pre-event email marketing?</label>
    <type>Checkbox</type>
</CustomField>