force-app/main/default/objects/Contact__c/fields/Employees_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Employees_From_Account__c</fullName>
    <formula>Account__r.NumberOfEmployees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employees_From Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>