force-app/main/default/objects/Contact__c/fields/Event_approval__c.field-meta.xml
<CustomField>
    <fullName>Event_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the contact needs to be approved for an event by Chief Commercial Officer -- mark this box</description>
    <inlineHelpText>If the contact needs to be approved for an event by Chief Commercial Officer -- mark this box</inlineHelpText>
    <label>Event approval</label>
    <type>Checkbox</type>
</CustomField>