force-app/main/default/objects/Contact__c/fields/Exclude_from_Inside_Sales_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Inside_Sales_From_Account__c</fullName>
    <formula>Account__r.Exclude_from_Inside_Sales_Lead_Gen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude from Inside Sales_From Account</label>
    <type>Checkbox</type>
</CustomField>