force-app/main/default/objects/Contact__c/fields/Fortune_100__c.field-meta.xml
<CustomField>
    <fullName>Fortune_100__c</fullName>
    <formula>Account__r.Fortune_100__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fortune 100</label>
    <type>Checkbox</type>
</CustomField>