force-app/main/default/objects/Contact__c/fields/Fortune_500__c.field-meta.xml
<CustomField>
    <fullName>Fortune_500__c</fullName>
    <formula>Account__r.Fortune_500__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fortune 500</label>
    <type>Checkbox</type>
</CustomField>