force-app/main/default/objects/Contact__c/fields/Goes_By__c.field-meta.xml
<CustomField>
    <fullName>Goes_By__c</fullName>
    <description>Nickname or how person prefers to be addressed vs what may appear in name field.</description>
    <label>Goes By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>