force-app/main/default/objects/Contact__c/fields/Inactive_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Inactive_phone_number__c</fullName>
    <label>Inactive phone number</label>
    <type>Phone</type>
</CustomField>