force-app/main/default/objects/Contact__c/fields/InactiveLeft_Company__c.field-meta.xml
<CustomField>
    <fullName>InactiveLeft_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive/Left Company</label>
    <type>Checkbox</type>
</CustomField>