force-app/main/default/objects/Contact__c/fields/Include_in_Client_Strategy_Calls_Emails__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Client_Strategy_Calls_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Client Strategy Calls/Emails?</label>
    <type>Checkbox</type>
</CustomField>