force-app/main/default/objects/Contact__c/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual</label>
    <referenceTo>Individual</referenceTo>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>