force-app/main/default/objects/Contact__c/fields/isdc_closedate__c.field-meta.xml
<CustomField>
    <fullName>isdc_closedate__c</fullName>
    <description>The date that the Neuralytics model was last run to re-evaluate the quality of the lead, and the score updated.</description>
    <label>Playbooks Contact Close Score Updated</label>
    <type>DateTime</type>
</CustomField>