force-app/main/default/objects/Contact__c/fields/isdc_closescore__c.field-meta.xml
<CustomField>
    <fullName>isdc_closescore__c</fullName>
    <label>Playbooks Contact Close Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>