force-app/main/default/objects/Contact__c/fields/isdc_closescoregrade__c.field-meta.xml
<CustomField>
    <fullName>isdc_closescoregrade__c</fullName>
    <description>Define scoring by something other than a Close Score. Example: A, B, C, D or High, Medium, Low.</description>
    <label>Playbooks Contact Close Score Grade</label>
    <length>200</length>
    <type>Text</type>
</CustomField>