force-app/main/default/objects/Contact__c/fields/Last_Task_Event_by_Livongo_Rep_From_Acct__c.field-meta.xml
<CustomField>
    <fullName>Last_Task_Event_by_Livongo_Rep_From_Acct__c</fullName>
    <formula>Account__r.Last_Task_Event_by_Livongo_Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Task/Event by Livongo Rep_From Acct</label>
    <type>Date</type>
</CustomField>