force-app/main/default/objects/Contact__c/fields/LastCURequestDate__c.field-meta.xml
<CustomField>
    <fullName>LastCURequestDate__c</fullName>
    <label>Last Stay-in-Touch Request Date</label>
    <type>DateTime</type>
</CustomField>