force-app/main/default/objects/Contact__c/fields/Lead_Email_Parse__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email_Parse__c</fullName>
    <label>Lead Email Parse</label>
    <length>250</length>
    <type>Text</type>
</CustomField>