force-app/main/default/objects/Contact__c/fields/Lead_No_Acct_Found_Via_Email_Parse_Flow__c.field-meta.xml
<CustomField>
    <fullName>Lead_No_Acct_Found_Via_Email_Parse_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead No Acct Found Via Email Parse Flow</label>
    <type>Checkbox</type>
</CustomField>