force-app/main/default/objects/Contact__c/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Hospital Association</fullName>
            </value>
            <value>
                <fullName>Becker&apos;s</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event/Tradeshow</fullName>
            </value>
            <value>
                <fullName>Hosted Event</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Paid Advertising</fullName>
            </value>
            <value>
                <fullName>State Hospital Association</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Third Party Acquired</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>White Hawk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>