force-app/main/default/objects/Contact__c/fields/Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Details__c</fullName>
    <label>Lead Source Detail - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>