force-app/main/default/objects/Contact__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>LinkedIn profile or corporate profile</description>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>