force-app/main/default/objects/Contact__c/fields/Mailing_Address_Custom__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Custom__c</fullName>
    <label>Mailing Address</label>
    <type>Address</type>
</CustomField>