force-app/main/default/objects/Contact__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <label>Mailing Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>