force-app/main/default/objects/Contact__c/fields/Management_Level__c.field-meta.xml
<CustomField>
    <fullName>Management_Level__c</fullName>
    <label>Management Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C-Suite</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>