force-app/main/default/objects/Contact__c/fields/Marketing_Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Relationship_Strength__c</fullName>
    <label>Marketing Relationship Strength</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Friendly</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Distant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>