force-app/main/default/objects/Contact__c/fields/Marketing_Site_Active_User__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Site_Active_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Site Active User?</label>
    <type>Checkbox</type>
</CustomField>