force-app/main/default/objects/Contact__c/fields/Marketing_Site_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Site_Date_Status__c</fullName>
    <description>Date &quot;Marketing Site - Active User?&quot; was last changed from Inactive to Active. This is a calculated field and not user-selectable.</description>
    <inlineHelpText>Date &quot;Marketing Site - Active User?&quot; was last changed from Inactive to Active. This is a calculated field and not user-selectable.</inlineHelpText>
    <label>Marketing Site - Date Status</label>
    <type>Date</type>
</CustomField>