force-app/main/default/objects/Contact__c/fields/Marketing_Suppressed__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Suppressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Suppressed</label>
    <type>Checkbox</type>
</CustomField>