force-app/main/default/objects/Contact__c/fields/Middle__c.field-meta.xml
<CustomField>
    <fullName>Middle__c</fullName>
    <description>Middle name or initial</description>
    <inlineHelpText>Middle name or initial</inlineHelpText>
    <label>Middle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>