force-app/main/default/objects/Contact__c/fields/Migrated_myStrength_Contact__c.field-meta.xml
<CustomField>
    <fullName>Migrated_myStrength_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denote myStrength migrated contacts</description>
    <label>Migrated myStrength Contact</label>
    <type>Checkbox</type>
</CustomField>