force-app/main/default/objects/Contact__c/fields/myStrengthContactExternalId__c.field-meta.xml
<CustomField>
    <fullName>myStrengthContactExternalId__c</fullName>
    <description>myStrength contact external id</description>
    <externalId>true</externalId>
    <label>myStrengthContactExternalId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>