force-app/main/default/objects/Contact__c/fields/Open_Opp_Count_From_Acct__c.field-meta.xml
<CustomField>
    <fullName>Open_Opp_Count_From_Acct__c</fullName>
    <formula>Account__r.Open_Opportunity_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Opp Count From Acct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>