force-app/main/default/objects/Contact__c/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Into Latest Event Invite</label>
    <type>Checkbox</type>
</CustomField>