force-app/main/default/objects/Contact__c/fields/Opt_out_of_commercial_marketing__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_of_commercial_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt out of commercial marketing?</label>
    <type>Checkbox</type>
</CustomField>