force-app/main/default/objects/Contact__c/fields/Other_Address__c.field-meta.xml
<CustomField>
    <fullName>Other_Address__c</fullName>
    <label>Other Address</label>
    <type>TextArea</type>
</CustomField>