force-app/main/default/objects/Contact__c/fields/Other_Address_Custom__c.field-meta.xml
<CustomField>
    <fullName>Other_Address_Custom__c</fullName>
    <label>Other Address</label>
    <type>Address</type>
</CustomField>