force-app/main/default/objects/Contact__c/fields/Owner_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_From_Account__c</fullName>
    <formula>Account__r.Owner:User.FirstName &amp;&quot; &quot;&amp; Account__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner_From Account</label>
    <type>Text</type>
</CustomField>