force-app/main/default/objects/Contact__c/fields/Parent_Account_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_From_Account__c</fullName>
    <formula>Account__r.ParentId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account_From Account</label>
    <type>Text</type>
</CustomField>