force-app/main/default/objects/Contact__c/fields/Playbooks_Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Next_Step_Due_Date__c</fullName>
    <description>Shows the date when the next set of Playbooks tasks are due.</description>
    <label>Playbooks Next Step Due Date</label>
    <type>Date</type>
</CustomField>