force-app/main/default/objects/Contact__c/fields/Playbooks_Play_Name__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Play_Name__c</fullName>
    <label>Playbooks Play Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>