force-app/main/default/objects/Contact__c/fields/Power_of_1__c.field-meta.xml
<CustomField>
    <fullName>Power_of_1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Contacts_PO1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>