force-app/main/default/objects/Contact__c/fields/Preferred_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Shipping_Address__c</fullName>
    <label>Preferred Shipping Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
            <value>
                <fullName>Other Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>