force-app/main/default/objects/Contact__c/fields/Promoter_or_Detractor__c.field-meta.xml
<CustomField>
    <fullName>Promoter_or_Detractor__c</fullName>
    <label>Promoter or Detractor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>