force-app/main/default/objects/Contact__c/fields/Provider_Fax__c.field-meta.xml
<CustomField>
    <fullName>Provider_Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>