force-app/main/default/objects/Contact__c/fields/Referenceable__c.field-meta.xml
<CustomField>
    <fullName>Referenceable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referenceable?</label>
    <type>Checkbox</type>
</CustomField>