force-app/main/default/objects/Contact__c/fields/SequenceInMultipleBirth__c.field-meta.xml
<CustomField>
    <fullName>SequenceInMultipleBirth__c</fullName>
    <label>Multiple Birth Sequence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>